namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-person-links-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-person-links-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "hmpps-person-record"
    cloud-platform.justice.gov.uk/application: "HMPPS Person Links API"
    cloud-platform.justice.gov.uk/owner: "HMPPS Core Person Record: hmpps-person-record@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-person-links-api"
    cloud-platform.justice.gov.uk/team-name: "hmpps-core-person"
    cloud-platform.justice.gov.uk/review-after: ""
